--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <link href="./resources/css/style.css" type="text/css" rel="stylesheet">		  	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-<p>Hellow Broadway</p>
+<div class="hello">
+<p>Hello Broadway</p>
+<img src="./resources/img/building.png"
+</div>
+
+<img src="./resources/img/execute.svg">
+<br>
+<img src="./resources/img/identify.svg">
+<br>
+<img src="./resources/img/understand.svg">
 </body>
 </html>
