--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link href="./resources/css/style.css" type="text/css" rel="stylesheet">		  	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-</head>
-<body>
-<div class="hello">
-<p>Hello Broadway</p>
-<img src="./resources/img/building.png"
-</div>
-
-<img src="./resources/img/execute.svg">
-<br>
-<img src="./resources/img/identify.svg">
-<br>
-<img src="./resources/img/understand.svg">
-</body>
+  <html>
+    <head>
+      <link href="./resources/css/style.css" type="text/css" rel="stylesheet">		  	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    </head>
+  <body>
+    <h1>Broadway Design</h1>
+	<div>
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Work</a></li>
+        <li><a href="">Team</a></li>
+        <li><a href="">Contact</a></li>
+	  </ul>
+    </div>
+    <img src="./resources/img/building.png" width=100% height=200px>
+    <h2>Our Process</h2>
+	<br>
+	<img src="./resources/img/execute.svg">
+    <br>
+	<h3>Identiy</h3>
+	<p>We focus on themost important details</p>
+	<br>
+    <img src="./resources/img/identify.svg">
+    <br>
+	<h3>Understand</h3>
+	<p>We study our projects inside out</p>
+	<br>
+    <img src="./resources/img/understand.svg">
+	<br>
+	<h3>Execute</h3>
+	<p>We put everything we have into our work</p>
+	<br>
+	<img src="./resources/img/building.png" width=100% height=20px>
+	<h4>Designed in New York</h4>
+	<br>
+	<h3>Portfolio</h3>
+	<p>Coming soon</p>
+	<br>
+	<h3>Team</h3>
+	<p>We're hiring</p>
+	<br>
+	<h3>Contact</h3>
+	<p>Phone: (555)-655-5555<br>
+	Email: test@example.com<br>
+	Twitter: @test</p>
+	<br>
+  </body>
 </html>
