--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
       <link href="./resources/css/style.css" type="text/css" rel="stylesheet">		  	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
   <body>
-    <h1>Broadway Design</h1>
-	<div>
-      <ul>
+    <header>
+	<br>
+	<h1>Broadway Design</h1>
+	  <nav>
+	  <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Work</a></li>
         <li><a href="">Team</a></li>
         <li><a href="">Contact</a></li>
 	  </ul>
-    </div>
-    <img src="./resources/img/building.png" width=100% height=200px>
+	  <nav>
+	  <br>
+    </header>
+	
+	<img src="./resources/img/building.png" width=100% height=200px>
     <h2>Our Process</h2>
 	<br>
 	<img src="./resources/img/execute.svg">
@@ -46,5 +51,8 @@
 	Email: test@example.com<br>
 	Twitter: @test</p>
 	<br>
+	<div id="bottom">
+	<p id="copyright">@copy Broadway 2016<a href="">    Home </a><a href="">About   </a><a href="">Work   </a><a href="">Team   </a><a href="">Contact   </a></p>
+	</div>
   </body>
 </html>
