--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link href="./resources/css/style.css" type="text/css" rel="stylesheet">		  	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <title>My broadway</title>    
+	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">		  	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
   <body>
-    <header>
-	<br>
+    <div class="dog">
 	<h1>Broadway Design</h1>
 	  <nav>
 	  <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Work</a></li>
-        <li><a href="">Team</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a class="btn-nav" href="#">Home</a></li>
+        <li><a class="btn-nav" href="#">About</a></li>
+        <li><a class="btn-nav" href="#">Work</a></li>
+        <li><a class="btn-nav" href="#">Team</a></li>
+        <li><a class="btn-nav" href="#">Contact</a></li>
 	  </ul>
 	  <nav>
-	  <br>
-    </header>
-	
-	<img src="./resources/img/building.png" width=100% height=200px>
+	 </div>
+		
     <h2>Our Process</h2>
 	<br>
-	<img src="./resources/img/execute.svg">
+	<img src="./resources/img/identify.svg">
     <br>
-	<h3>Identiy</h3>
+	<h3>Identify</h3>
 	<p>We focus on themost important details</p>
 	<br>
-    <img src="./resources/img/identify.svg">
+    <img src="./resources/img/understand.svg">
     <br>
 	<h3>Understand</h3>
 	<p>We study our projects inside out</p>
 	<br>
-    <img src="./resources/img/understand.svg">
+    <img src="./resources/img/execute.svg">
 	<br>
 	<h3>Execute</h3>
 	<p>We put everything we have into our work</p>
 	<br>
-	<img src="./resources/img/building.png" width=100% height=20px>
+	
+	<div class="dog">
 	<h4>Designed in New York</h4>
-	<br>
+	</div>
+	
 	<h3>Portfolio</h3>
 	<p>Coming soon</p>
 	<br>
@@ -51,8 +51,13 @@
 	Email: test@example.com<br>
 	Twitter: @test</p>
 	<br>
-	<div id="bottom">
-	<p id="copyright">@copy Broadway 2016<a href="">    Home </a><a href="">About   </a><a href="">Work   </a><a href="">Team   </a><a href="">Contact   </a></p>
+	<div class="bottom">
+	  <p id="copyright">@copy Broadway 2016
+	    <a href="">    Home </a><a href="">About</a>
+	    <a href="">Work</a>
+	    <a href="">Team</a>
+	    <a href="">Contact</a>
+	</p>
 	</div>
   </body>
 </html>
